src/objects/Service_Lines__c.object
<CustomObject>
    <description>Service lines for prior authorization</description>
    <fields>
        <fullName>Decision_By__c</fullName>
        <description>Person that made the decision.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Decision By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Outcome__c</fullName>
        <description>Decision of Prior Authorization at the line level.</description>
        <label>Decision Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Covered/Approved - Administrative</fullName>
                </value>
                <value>
                    <fullName>Covered/Approved - Clinical</fullName>
                </value>
                <value>
                    <fullName>Covered/Approved - Reconsideration</fullName>
                </value>
                <value>
                    <fullName>Denied - Administrative</fullName>
                </value>
                <value>
                    <fullName>Denied - Clinical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decision_Subtype__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Decision Subtype</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date for service line.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gap_Outcome__c</fullName>
        <description>Fields display when the gap exception checkbox is checked and the decision out come is covered/approved</description>
        <label>Gap Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical Gap Approved</fullName>
                </value>
                <value>
                    <fullName>Clinical Gap Not Approved: Successful Steerage</fullName>
                </value>
                <value>
                    <fullName>Clinical Gap Not Approved: Unsuccessful Steerage</fullName>
                </value>
                <value>
                    <fullName>Gap Review Not Appropriate</fullName>
                </value>
                <value>
                    <fullName>Geographical Gap Approved</fullName>
                </value>
                <value>
                    <fullName>Geographical Gap Not Approved: Successful Steerage</fullName>
                </value>
                <value>
                    <fullName>Geographical Gap Not Approved: Unsuccessful Steerage</fullName>
                </value>
                <value>
                    <fullName>Provider Incorrectly Identified as OON</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Director__c</fullName>
        <description>Name of the Medical Director</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Director</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peer_to_Peer_Scheduled_Date_and_Time__c</fullName>
        <description>Date and time the peer review is scheduled.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Peer to Peer Scheduled Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Procedure_Code__c</fullName>
        <description>Procedure code for the service line of the prior authorization</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Procedure Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedure_Description__c</fullName>
        <description>Description for the Procedure code.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Procedure Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Reason for Outcome.</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Benefits Exhausted</fullName>
                </value>
                <value>
                    <fullName>Case Opened on Wrong Member</fullName>
                </value>
                <value>
                    <fullName>Change in Review Priority</fullName>
                </value>
                <value>
                    <fullName>Claims Processing Error</fullName>
                </value>
                <value>
                    <fullName>Credentialing Error</fullName>
                </value>
                <value>
                    <fullName>Duplicate Notification</fullName>
                </value>
                <value>
                    <fullName>Duplicate Service</fullName>
                </value>
                <value>
                    <fullName>Entered on Wrong Member</fullName>
                </value>
                <value>
                    <fullName>I&amp;E Criteria Not Met</fullName>
                </value>
                <value>
                    <fullName>Ineligible for SNI</fullName>
                </value>
                <value>
                    <fullName>Infusion Site of Care</fullName>
                </value>
                <value>
                    <fullName>Initially Not Covered as Ineligible/Eligibility Established</fullName>
                </value>
                <value>
                    <fullName>Lack of Medical Necessity</fullName>
                </value>
                <value>
                    <fullName>Medical equipment which cannot withstand repeated use AND is not disposable, AND is used to serve a medical purpose, AND is generally not useful to a person in the absence of a Sickness or Injury, AND is appropriate for use in the home.</fullName>
                </value>
                <value>
                    <fullName>Medical equipment which can withstand repeated use AND is not disposable, AND is used to serve a medical purpose, AND is generally not useful to a person in the absence of a Sickness or Injury, AND is appropriate for use in the home.</fullName>
                </value>
                <value>
                    <fullName>Member Ineligible for Benefits</fullName>
                </value>
                <value>
                    <fullName>Member Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Modified Level of Care</fullName>
                </value>
                <value>
                    <fullName>Non-network - services are available/accessible in network -(No OON Benefits)</fullName>
                </value>
                <value>
                    <fullName>Notification Not Required</fullName>
                </value>
                <value>
                    <fullName>Other Payer</fullName>
                </value>
                <value>
                    <fullName>Provider is a contracted network provider/services are OON</fullName>
                </value>
                <value>
                    <fullName>Provider Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Request Submitted Incorrectly</fullName>
                </value>
                <value>
                    <fullName>Second Opinion</fullName>
                </value>
                <value>
                    <fullName>Service Not Rendered</fullName>
                </value>
                <value>
                    <fullName>Services are being provided for the primary purpose of improving or restoring physiologic function.</fullName>
                </value>
                <value>
                    <fullName>Services are not being provided for the primary purpose of improving or restoring physiologic function.</fullName>
                </value>
                <value>
                    <fullName>Services are not covered due to specific exclusions or limitations in member&apos;s benefit document</fullName>
                </value>
                <value>
                    <fullName>Services do not require a skilled/licensed professional.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rendered_Date__c</fullName>
        <description>Date outcome was rendered.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Rendered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Reference__c</fullName>
        <description>Service Reference number for the service line</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Reference #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date for service line</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the service line</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Partial Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suppress_Notifications__c</fullName>
        <formula>IF( OR( UPPER(Procedure_Code__c) = &quot;B4036&quot;,
UPPER(Procedure_Code__c) = &quot;B4149&quot;,
UPPER(Procedure_Code__c) = &quot;B4150&quot;,
UPPER(Procedure_Code__c) = &quot;B4152&quot;,
UPPER(Procedure_Code__c) = &quot;B4153&quot;,
UPPER(Procedure_Code__c) = &quot;B4154&quot;,
UPPER(Procedure_Code__c) = &quot;B4155&quot;,
UPPER(Procedure_Code__c) = &quot;B4161&quot;,
UPPER(Procedure_Code__c) = &quot;B4157&quot;,
UPPER(Procedure_Code__c) = &quot;B4158&quot;,
UPPER(Procedure_Code__c) = &quot;B4159&quot;,
UPPER(Procedure_Code__c) = &quot;B4160&quot;,
UPPER(Procedure_Code__c) = &quot;B4161&quot;,
UPPER(Procedure_Code__c) = &quot;B4162&quot;,
UPPER(Procedure_Code__c) = &quot;B9000&quot;,
UPPER(Procedure_Code__c) = &quot;B9002&quot;,
UPPER(Procedure_Code__c) = &quot;B9998&quot;,
UPPER(Procedure_Code__c) = &quot;S9340&quot;,
UPPER(Procedure_Code__c) = &quot;S9341&quot;,
UPPER(Procedure_Code__c) = &quot;S9342&quot;,
UPPER(Procedure_Code__c) = &quot;S9343&quot;,
UPPER(Procedure_Code__c) = &quot;T1000&quot;,
UPPER(Procedure_Code__c) = &quot;T1002&quot;,
UPPER(Procedure_Code__c) = &quot;T1003&quot;,
UPPER(Procedure_Code__c) = &quot;T1030&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suppress Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Service Lines</relationshipLabel>
        <relationshipName>Service_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>serviceLinkUniqueId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>serviceLinkUniqueId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SL-{00000}</displayFormat>
        <label>Service Lines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Gap_Exception_Reason_Selected</fullName>
        <active>false</active>
        <description>When Gap Exception is checked on the work order a Gap Outcome must be selected.</description>
        <errorConditionFormula>AND((NOT( ISPICKVAL(Decision_Outcome__c , &quot;&quot;)) &amp;&amp;
NOT( ISPICKVAL(Decision_Outcome__c , &quot;Canceled&quot;)))
,
Work_Order__r.Gap_Exception_Review__c = True,
ISPICKVAL( Gap_Outcome__c, &quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>Gap_Outcome__c</errorDisplayField>
        <errorMessage>Please select a Gap Outcome when selecting a Decision Outcome for a Gap Exception Review</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ITE_ReasonRequiredForDecisionOutcome</fullName>
        <active>false</active>
        <description>Reason field becomes required when a Decision Outcome is selected.</description>
        <errorConditionFormula>AND(  Not(ISPICKVAL(Decision_Outcome__c, &quot;&quot;)),    ISPICKVAL(Reason__c, &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Reason__c</errorDisplayField>
        <errorMessage>Select a Reason for the Decision Outcome.</errorMessage>
    </validationRules>
</CustomObject>